--- a/app/views/user/login.html.erb
+++ b/app/views/user/login.html.erb
@@ -68,7 +68,7 @@
 <div id="footer">
   <div id="footer_logo">
     <div id="powered_by">
-      <%= t('powered_by') %> <a href=<%= "#{FEDENA_SETTINGS[:company_url]}" %> target="_blank"><%= FEDENA_SETTINGS[:company_name] %></a>
+      <%= t('powered_by') %> <a href=<%= "#{FedenaSetting.company_details[:company_url]}" %> target="_blank"><%= FedenaSetting.company_details[:company_name] %></a>
     </div>
   </div>
 </div>
