--- a/app/views/attendances/_edit.html.erb
+++ b/app/views/attendances/_edit.html.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 <div id="form-errors"></div>
-<label class="head_label"><%= t('edit_attendance') %> <span><%= @student.first_name %></span></label>
+<label class="head_label"><%= t('edit_attendance_for') %> <span><%= @student.first_name %></span></label>
 
 <div id="ajax-edit">
   <br/>
