--- a/app/views/attendance_reports/_subject.html.erb
+++ b/app/views/attendance_reports/_subject.html.erb
@@ -20,13 +20,16 @@
 <div class="label-field-pair">
   <label><%= t('select_a_subject') %> </label>
   <div class="text-input-bg">
+    <% text = "#{t('select_a_subject')}"  %>
+    <% dropdown_list = [] %>
     <% if @current_user.employee? and @allow_access==true %>
-      <% text = "#{t('select_a_subject')}"  %>
+      <% dropdown_list = @subjects.map {|b| [b.name, b.id] }  %>
     <% else %>
-      <% text =  "#{t('all_subjects')}" %>
+      <% dropdown_list << ["#{t('all_subjects')}", "all_sub"] %>
+      <% dropdown_list +=  @subjects.map {|b| [b.name, b.id] } %>
     <% end %>
     <%= select :subject, :id,
-      @subjects.map {|b| [b.name, b.id] },
+      dropdown_list,
       {:prompt => text},
       {:onchange => "#{remote_function(
       :url => { :action => 'mode' },
