--- a/app/views/finance/view_employee_payslip.html.erb
+++ b/app/views/finance/view_employee_payslip.html.erb
@@ -39,11 +39,13 @@
   <ul class="item-list">
     <li class="heading1"><%= t('earnings') %></li>
     <% @monthly_payslips.each do |mp| %>
-      <% unless mp.payroll_category.is_deduction == true %>
-        <li class="list<%=cycle('odd', 'even')%>">
-          <div class="item-name"><%= mp.payroll_category.name  %> </div>
-          <div class="item-edit"><span class="currency-type"><%= @currency_type %></span> <%="%.2f" %mp.amount.to_f  %></div>
-        </li>
+      <% unless mp.payroll_category.blank? %>
+        <% unless mp.payroll_category.is_deduction == true %>
+          <li class="list<%=cycle('odd', 'even')%>">
+            <div class="item-name"><%= mp.payroll_category.name  %> </div>
+            <div class="item-edit"><span class="currency-type"><%= @currency_type %></span> <%="%.2f" %mp.amount.to_f  %></div>
+          </li>
+        <% end %>
       <% end %>
     <% end %>
     <% unless @individual_payslips.empty? %>
