guardians page bug fix for country
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3998 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/student/guardians.erb
+++ b/app/views/student/guardians.erb
@@ -108,7 +108,7 @@
           <div class="profile_info_text2"> <%= p.office_address_line1%> <%= p.office_address_line2%> </div>
 
           <div class="profile_info_label"> </div>
-          <div class="profile_info_text"> <%= p.city %> <%= p.state %> <%= p.country.name %> </div>
+          <div class="profile_info_text"> <%= p.city %> <%= p.state %> <%= p.country.nil? ? "" : p.country.name %> </div>
         </div>
 
         <div class="new_profile_info_area1">
