--- a/app/views/employee/add_category.erb
+++ b/app/views/employee/add_category.erb
@@ -29,10 +29,16 @@
 <div id="page-yield">
 
   <% unless flash[:warn_notice].nil? %>
-    <p class="flash-msg"> <%= flash[:warn_notice] %> </p>
+    <div id="errorExplanation1">
+      <ul>
+        <li>
+          <%= flash[:warn_notice] %>
+        </li>
+      </ul>
+    </div>
   <% end %>
 
-    <% unless flash[:notice].nil? %>
+  <% unless flash[:notice].nil? %>
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
 
