--- a/app/views/employee/add_department.erb
+++ b/app/views/employee/add_department.erb
@@ -22,7 +22,7 @@
   <h1><%= "#{t('employee_settings')}" %></h1>
   <h3><%= t('add_department') %></h3>
   <div id="app-back-button">
-   <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
+    <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
 </div>
 
@@ -30,37 +30,45 @@
 
   <%- form_for :department do |c| -%>
 
-  <% unless flash[:notice].nil? %>
-    <p class="flash-msg"> <%= flash[:notice] %> </p>
-  <% end %>
-
+    <% unless flash[:notice].nil? %>
+      <p class="flash-msg"> <%= flash[:notice] %> </p>
+    <% end %>
+    <% unless flash[:warn_notice].nil? %>
+      <div id="errorExplanation1">
+        <ul>
+          <li>
+            <%= flash[:warn_notice] %>
+          </li>
+        </ul>
+      </div>
+    <% end %>
     <%= error_messages_for 'department' %>
-<div id="form-content">
-    <div class="label-field-pair">
-      <label for="department_name"><%= t('name') %></label>
-      <div class="text-input-bg"> <%= c.text_field :name %> </div>
-    </div>
+    <div id="form-content">
+      <div class="label-field-pair">
+        <label for="department_name"><%= t('name') %></label>
+        <div class="text-input-bg"> <%= c.text_field :name %> </div>
+      </div>
 
-    <div class="label-field-pair">
-      <label for="department_code"><%= "#{t('department_code')}" %></label>
-      <div class="text-input-bg"> <%= c.text_field :code %> </div>
-    </div>
+      <div class="label-field-pair">
+        <label for="department_code"><%= "#{t('department_code')}" %></label>
+        <div class="text-input-bg"> <%= c.text_field :code %> </div>
+      </div>
 
-    <div class="label-checkbox-pair">
-      <label class="status" for="status"><%= t('status') %></label>
-      <div id="radio-buttons">
-      <%= c.radio_button  "status", "true", :checked => "checked" %>
-      <label class="label_for_status" for="add_grade_status_true"><%= t('active') %></label>
+      <div class="label-checkbox-pair">
+        <label class="status" for="status"><%= t('status') %></label>
+        <div id="radio-buttons">
+          <%= c.radio_button  "status", "true", :checked => "checked" %>
+          <label class="label_for_status" for="add_grade_status_true"><%= t('active') %></label>
 
-      <%= c.radio_button  "status", "false" %>
-      <label class="label_for_status" for="add_grade_status_false"><%= t('inactive') %></label>
-    </div>
-    </div>
+          <%= c.radio_button  "status", "false" %>
+          <label class="label_for_status" for="add_grade_status_false"><%= t('inactive') %></label>
+        </div>
+      </div>
 
-    <div id="submit-button">
-      <%=submit_tag("► #{t('create_text')}") %>
+      <div id="submit-button">
+        <%=submit_tag("► #{t('create_text')}") %>
+      </div>
     </div>
-</div>
 
   <%- end -%>
 
