--- a/public/stylesheets/rtl/payroll/add_category.css
+++ b/public/stylesheets/rtl/payroll/add_category.css
@@ -113,3 +113,17 @@
     margin-right:208px;
     width:250px;
 }
+#errorExplanation1 {
+    background: url("/images/_global/error.png") no-repeat scroll 10px 14px #FFDEDF;
+    border-radius: 10px 10px 10px 10px;
+    height: auto;
+    margin: 20px auto;
+    padding: 10px 20px 20px 0;
+    width: 510px;
+}
+#errorExplanation1 ul li {
+    font-size: 13px;
+    font-weight: 600;
+    margin-top: -10px;
+    display: block;
+}
