--- a/app/views/reminder/_to_users.erb
+++ b/app/views/reminder/_to_users.erb
@@ -29,7 +29,7 @@
       </div>
       <% @to_users.each do |t| %>
         <% user = User.find(t) %>
-        <div class="hover"><%= link_to user.first_name+add  , '#', :onClick => "add_recipient(#{t})", :class=>'individual',
+        <div class="hover"><%= link_to user.full_name+add  , '#', :onClick => "add_recipient(#{t})", :class=>'individual',
     :before => "Element.show('loader')",
       :success => "Element.hide('loader')" %>
          
