--- a/app/views/employee/change_reporting_manager.erb
+++ b/app/views/employee/change_reporting_manager.erb
@@ -22,7 +22,7 @@
   <h1><%= t('reporting_manager') %></h1>
   <h3><%= t('change') %></h3>
   <div id="app-back-button">
-       <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
+    <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
 </div>
 <script> function update_reporting_manager(id) {
@@ -50,7 +50,7 @@
       </div>
 
       <%= e.hidden_field :reporting_manager_id %>
-      
+
     <% end %>
 
     <div id="search-options">
@@ -59,18 +59,18 @@
         <div id="search-text-box"><%= text_field_tag("query", params['query'], :autocomplete => 'off') %></div>
 
         <%= image_tag("loader.gif",
-        :align => "absmiddle",
-        :border => 0,
-        :id => "loader",
-        :style => "display: none;" ) %>
+          :align => "absmiddle",
+          :border => 0,
+          :id => "loader",
+          :style => "display: none;" ) %>
         <div class="extender"></div>
       </div>
-      
+
 
       <%= observe_fields ['employee_reporting_manager_id'],
-      :frequency => 0.1,
-      :update => 'changed-manager-name',
-      :url=> {:action=>'update_reporting_manager_name'} %>
+        :frequency => 0.1,
+        :update => 'changed-manager-name',
+        :url=> {:action=>'update_reporting_manager_name'} %>
 
       <div id="advanced-options">
         <div class="employee-search-options"><%= select :employee, :department_id, @departments.map {|s| [s.name, s.id]}, :prompt => "#{t('select_department')}" %></div>
@@ -81,15 +81,35 @@
       </div>
     </div>
 
-    <%= observe_fields ['query', 'employee_department_id','employee_category_id', 'employee_position_id', 'employee_grade_id'],
-    :frequency => 0.1,
-    :update => 'information',
-    :before => "Element.show('loader')",
-    :success => "Element.hide('loader')",
-    :url => {:action => 'select_reporting_manager'} %>
+<%#= observe_fields ['query', 'employee_department_id','employee_category_id', 'employee_position_id', 'employee_grade_id'],
+:frequency => 0.1,
+:update => 'information',
+:before => "Element.show('loader')",
+:success => "Element.hide('loader')",
+:url => {:action => 'select_reporting_manager'} %>
+    <script type="text/javascript">
+    function search_ajax(){
+      if ($('query').value.include("%")) return;
+<%="#{remote_function(:url => {:action => "select_reporting_manager"},
+:with =>  "'query='+ $('query').value + '&employee_department_id='+$('employee_department_id').value + '&employee_category_id='+$('employee_category_id').value + '&employee_position_id='+$('employee_position_id').value + '&employee_grade_id='+$('employee_grade_id').value",
+:before => "Element.show('loader')",
+:success => "Element.hide('loader')",
+:update=>"information"
+)}"%>
+}
+
+document.observe("dom:loaded", function() {
+  new Form.Element.Observer('query', 1, search_ajax);
+  new Form.Element.Observer('employee_department_id', 0.1, search_ajax);
+  new Form.Element.Observer('employee_category_id', 0.1, search_ajax);
+  new Form.Element.Observer('employee_position_id', 0.1, search_ajax);
+  new Form.Element.Observer('employee_grade_id', 0.1, search_ajax);
+});
+
+    </script>
   </div>
 
 
   <div id="information"></div>
 
- </div>
+</div>
