BUG #3743 css issue fixed
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@4013 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/attendance_reports/report_pdf.erb
+++ b/app/views/attendance_reports/report_pdf.erb
@@ -23,7 +23,6 @@
   <div class="page1"></div>
   <div class="section1 row" >
     <center>
-      <div class="hor_line"></div>
       <h2><%= t('attendance_report') %></h2>
       <div class="hor_line"></div>
 
@@ -38,12 +37,12 @@
         <div id ="main_info">
           <div class="info1">
             <div class="info-left">
-              <h4><%= t('course_name') %> = <%= @students.first.batch.course.full_name %></h4>
+              <h4><%= t('course') %> : <%= @students.first.batch.course.full_name %></h4>
             </div>
             <div class="info-right">
-              <h4><%= t('batch') %> = <%= @students.first.batch.name %></h4>
+              <h4 style="color:black;"><%= @students.first.batch.full_name %></h4>
             </div>
-            <div class="hor_line"></div>
+            <div class="hor_line1"></div>
           </div>
           <div class="info1">
             <div class="info-left">
@@ -52,7 +51,6 @@
               <% else %>
                 <h4> <%= "#{t('total_no_of_wrkng_hours')} = " + @academic_days.to_s %></h4>
               <% end %>
-              <div class="hor_line"></div>
             </div>
           </div>
         </div>
